# rjagro

./: .gitignore  Cargo.toml  README.md  backup.sql
entity/: Cargo.toml
entity/src/: batch_allocation_lines.rs  batch_allocations.rs  batch_closure_summary.rs  batch_requirements.rs  batch_sales.rs  batches.rs  bird_count_history.rs  bird_sell_history.rs  farmer_commission_history.rs  farmers.rs  inventory.rs  inventory_movements.rs  items.rs  ledger_accounts.rs  ledger_entries.rs  mod.rs  prelude.rs  production_lines.rs  purchases.rs  sea_orm_active_enums.rs  stock_receipts.rs  suppliers.rs  traders.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250810_161418_iteration1.rs  m20250819_083602_iteration_2.rs  m20250819_215006_ledger.rs  m20250826_234204_stock_receipts.rs  m20250901_223316_farmer_commission.rs  m20250906_182108_closed_batches.rs  m20250906_211511_batch_sales.rs
rjagro_frontend/: package-lock.json  package.json
rjagro_frontend/app/: layout.tsx  page.tsx
rjagro_frontend/app/api/: batch_allocation_lines.ts  batch_allocations.ts  batch_requirements.ts  batch_sales.ts  batches.ts  bird_count_history.ts  farmers.ts  inventory.ts  inventory_movement.ts  items.ts  ledger_accounts.ts  purchases.ts  (+6 more)
src/: fetch_all.rs  main.rs  models.rs
src/auth/: jwt.rs  login.rs  middleware.rs  mod.rs  roles.rs
src/handlers/: batch_requirements.rs  batch_sales.rs  batches.rs  fetch_all.rs  fetch_by_id.rs  inserts.rs  mod.rs  purchases.rs  visibility.rs
src/routes/: fetch_all.rs  fetch_by_id.rs  inserts.rs  mod.rs
(+37 files in other folders)
