[package]
name = "distracted-swartz"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".","migration", "entity"]

[dependencies]
migration = { path = "migration" }
entity = {path = "entity"}
axum = { version = "0.8", features = ["multipart","macros"] }
shuttle-axum = "0.56.0"
shuttle-runtime = "0.56.0"
tokio = {version= "1.47.1", features = ["full"]}
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
chrono = "0.4.41"
thiserror = "2.0.12"
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
cookie = "0.18.1"
reqwest = "0.12.22"
